--- a/client/src/styles/editWindow.scss
+++ b/client/src/styles/editWindow.scss
@@ -239,8 +239,8 @@
 			text-align: center;
 			padding: 10px 0;
 			margin: 10px 0;
-			@media all and (max-width:600px){
-				display: block;
+			@media all and (max-width: 600px){
+				flex-direction: column;
 			}
 		}
 		&-ok {
@@ -250,7 +250,7 @@
 			button {
 				max-width: 100%;
 				width: 60%;
-				@media all and (max-width:600px){
+				@media all and (max-width: 600px){
 					width: 100%;
 				}
 			}
@@ -260,14 +260,14 @@
 			flex-grow: 1;
 			padding: 0;
 			width: 50%;
-			@media all and (max-width:600px){
+			@media all and (max-width: 600px){
 				text-align: center;
 				width: 100%;
 			}
 			button {
 				max-width: 360px;
 				width: 80%;
-				@media all and (max-width:600px){
+				@media all and (max-width: 600px){
 					width: 100%;
 				}
 			}
@@ -277,14 +277,14 @@
 			flex-grow: 1;
 			padding: 0;
 			width: 50%;
-			@media all and (max-width:600px){
+			@media all and (max-width: 600px){
 				text-align: center;
 				width: 100%;
 			}
 			button {
 				max-width: 360px;
 				width: 80%;
-				@media all and (max-width:600px){
+				@media all and (max-width: 600px){
 					width: 100%;
 				}
 			}
@@ -328,14 +328,19 @@
 		&-main {
 			padding: 10px;
 			flex-grow: 10;
+			button {
+				width: 96%;
+				max-width: 400px;
+			}
 		}
 	}
 
 	&-btn-close {
 		position: absolute;
-		top: -25px;
-		right: 0px;
-		width: 1.4em; height: 1.4em;
+		top: 10px;
+		right: 10px;
+		z-index: 100;
+		width: 2em; height: 2em;
 		button {
 			position: absolute;
 			left: 0;
@@ -345,14 +350,14 @@
 			padding: 0;
 			margin: 0;
 			border-radius: 50%;
-			border: 1px solid #999;
-			background-color: #eee;
+			border: 0px none;
+			background-color: transparent;
 			color: #999;
 			cursor: pointer;
 			&::before,
 			&::after {
 				content: "";
-				border-bottom: 1px solid #999;
+				border-bottom: 2px solid #999;
 				width: 70%;
 				position: absolute;
 				top: 50%;
@@ -365,11 +370,10 @@
 				transform: rotate(-45deg);
 			}
 			&:hover {
-				border: 1px solid #666;
-				background-color: #f9f9f9;
+				// background-color: #f9f9f9;
 				&::before,
 				&::after {
-					border-bottom: 1px solid #666;
+					border-bottom: 2px solid #333;
 				}
 			}
 		}
