imageフィールドに、登録した画像が自動的にリサイズされる機能を追加した。

--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -39,7 +39,8 @@
 	}
 
 	// Fields
-	@import '../../fields/client/app.fields.color';
+	@import '../../fields/client/app.fields.color_files/field_color';
+	@import '../../fields/client/app.fields.image_files/field_image';
 
 
 	// CodeMirror 拡張
