--- a/client/src/styles/instanceTreeView.scss
+++ b/client/src/styles/instanceTreeView.scss
@@ -7,12 +7,14 @@
 		margin:0; padding:0 0 0 5px;
 		display: table;
 		width: 100%;
+		box-sizing: border-box;
 	}
 	li{
 		list-style:none;
 		display: table;
 		width: 100%;
 		font-size: small;
+		box-sizing: border-box;
 	}
 
 	&-fields{
@@ -34,6 +36,7 @@
 
 	[data-broccoli-instance-path]{
 		display: table;
+		box-sizing: border-box;
 		width: 100%;
 		border:2px solid #666;
 		border-bottom-width: 0px;
