ダークモード用のスタイルをバンドルした。(2)

--- a/client/src/themes/darkmode.css.scss
+++ b/client/src/themes/darkmode.css.scss
@@ -31,19 +31,19 @@
 
 
 // Canvas
-// @import "../styles/canvas";
+@import "../styles/canvas-darkmode";
 
 
 // Instance Path View
-// @import "../styles/instancePathView";
+@import "../styles/instancePathView-darkmode";
 
 
 // Instance Tree View
-// @import "../styles/instanceTreeView";
+@import "../styles/instanceTreeView-darkmode";
 
 
 // Panels
-// @import "../styles/panel";
+@import "../styles/panel-darkmode";
 
 
 // edit window
@@ -51,7 +51,7 @@
 
 
 // find window
-// @import "../styles/findWindow";
+@import "../styles/findWindow-darkmode";
 
 
 // lightbox
@@ -59,23 +59,23 @@
 
 
 // progress
-// @import "../styles/progress";
+@import "../styles/progress-darkmode";
 
 
 // Module Info, and Readme
-// @import "../styles/moduleInfo";
+@import "../styles/moduleInfo-darkmode";
 
 
 // Module Palette
-// @import "../styles/modulePalette";
+@import "../styles/modulePalette-darkmode";
 
 
 // Context Menu
-// @import "../styles/contextMenu";
+@import "../styles/contextMenu-darkmode";
 
 
 // Indicator
-// @import "../styles/indicator";
+@import "../styles/indicator-darkmode";
 
 
 // insert window
