--- a/client/src/styles/instanceTreeView.scss
+++ b/client/src/styles/instanceTreeView.scss
@@ -22,14 +22,17 @@
 		background-color: #f5f5f5;
 	}
 	&-bowlname{
+		color: #333;
 		font-weight: bold;
 		margin: 1em 0 0.5em 0;
 		display: block;
 	}
 	&-modulename{
+		color: #333;
 		font-weight: bold;
 	}
 	&-fieldname{
+		color: #333;
 		font-weight: normal;
 		font-size: 85%;
 	}
