--- a/client/src/themes/darkmode.css.scss
+++ b/client/src/themes/darkmode.css.scss
@@ -24,9 +24,9 @@
 }
 
 // mixin: appender
-@mixin broccoli--appender(){
+@mixin broccoli--appender-darkmode(){
 	color: #3871E0;
-	background-color: #F5FAFF;
+	background-color: #222e3a;
 }
 
 
