--- a/client/src/styles/editWindow.scss
+++ b/client/src/styles/editWindow.scss
@@ -382,6 +382,7 @@
 	&-inline-error-message {
 		border: none;
 		color: #a94442;
+		padding: 1em 18px;
 		ul{
 			margin-top: 0;
 			margin-bottom: 0;
