editWindow: インスタンスロックを変更できるようになった。

--- a/client/src/apis/editWindow_files/templates/main.twig
+++ b/client/src/apis/editWindow_files/templates/main.twig
@@ -23,14 +23,14 @@
 					<textarea class="px2-input" id="broccoli__edit-window-builtin-dec-field" placeholder=""></textarea>
 				</div>
 			</div>
-			<div class="broccoli__edit-window-builtin-fields__row broccoli__edit-window-instance-lock-field-wrap">
-				<div class="broccoli__edit-window-builtin-fields__title"><label for="broccoli__edit-window-instance-lock-field">{{ lb.get('ui_label.instance_lock') }}</label></div>
+			<div class="broccoli__edit-window-builtin-fields__row broccoli__edit-window-builtin-instance-lock-field-wrap">
+				<div class="broccoli__edit-window-builtin-fields__title"><label for="broccoli__edit-window-builtin-instance-lock-field">{{ lb.get('ui_label.instance_lock') }}</label></div>
 				<div class="broccoli__edit-window-builtin-fields__input">
 					<ul class="px2-horizontal-list">
-						<li><label><input type="checkbox" id="broccoli__edit-window-instance-lock-field-edit" /> {{ lb.get('ui_label.instance_lock.edit') }}</label></li>
-						<li><label><input type="checkbox" id="broccoli__edit-window-instance-lock-field-children" /> {{ lb.get('ui_label.instance_lock.children') }}</label></li>
-						<li><label><input type="checkbox" id="broccoli__edit-window-instance-lock-field-move" /> {{ lb.get('ui_label.instance_lock.move') }}</label></li>
-						<li><label><input type="checkbox" id="broccoli__edit-window-instance-lock-field-delete" /> {{ lb.get('ui_label.instance_lock.delete') }}</label></li>
+						<li><label><input type="checkbox" id="broccoli__edit-window-builtin-instance-lock-field-contents" /> {{ lb.get('ui_label.instance_lock.contents') }}</label></li>
+						<li><label><input type="checkbox" id="broccoli__edit-window-builtin-instance-lock-field-children" /> {{ lb.get('ui_label.instance_lock.children') }}</label></li>
+						<li><label><input type="checkbox" id="broccoli__edit-window-builtin-instance-lock-field-move" /> {{ lb.get('ui_label.instance_lock.move') }}</label></li>
+						<li><label><input type="checkbox" id="broccoli__edit-window-builtin-instance-lock-field-delete" /> {{ lb.get('ui_label.instance_lock.delete') }}</label></li>
 					</ul>
 				</div>
 			</div>
