--- a/client/src/themes/auto.css.scss
+++ b/client/src/themes/auto.css.scss
@@ -1,3 +1,4 @@
+@media (prefers-color-scheme: dark) {
 // px2style
 @import '../../../node_modules/px2style/dist/themes/darkmode';
 
@@ -78,3 +79,4 @@
 
 // insert window
 @import "../styles/insertWindow-darkmode";
+}
