darkmodeで、ドロップインジケーターのスタイルが崩れていた問題を修正

--- a/client/src/styles/panel-darkmode.scss
+++ b/client/src/styles/panel-darkmode.scss
@@ -8,7 +8,7 @@
 		border-color: #3871E0;
 		background-color: rgba(56, 113, 224, 0);
 
-		.broccoli__panel-module-name{
+		.broccoli__panel-module-name {
 			>div {
 				border: 1px solid #3871E0;
 				background: #3871E0;
@@ -16,10 +16,10 @@
 			}
 		}
 
-		&[data-broccoli-sub-mod-name]{
+		&[data-broccoli-sub-mod-name] {
 			border-color: #189AA3;
 			background-color: rgba(24,154,163, 0);
-			.broccoli__panel-module-name{
+			.broccoli__panel-module-name {
 				>div {
 					border: 1px solid #189AA3;
 					background: #189AA3;
@@ -44,29 +44,31 @@
 	border-color: #3871E0;
 	background-color: rgba(56, 113, 224, 0.1);
 
-	&[data-broccoli-sub-mod-name]{
+	&[data-broccoli-sub-mod-name] {
 		border-color: #189AA3;
 		background-color: rgba(24, 154, 163, 0.1);
 	}
 }
 
-.broccoli__panel--drag-entered-u{
+.broccoli__panel--drag-entered-u {
 	background: linear-gradient(rgba(56, 113, 224, 0.2), rgba(56, 113, 224, 0.0)) !important;
-	&[data-broccoli-sub-mod-name]{
+	&[data-broccoli-sub-mod-name] {
 		background: linear-gradient(rgba(24, 154, 163, 0.2), rgba(24, 154, 163, 0.0)) !important;
 	}
 }
-.broccoli__panel--drag-entered-d{
+.broccoli__panel--drag-entered-d {
 	background: linear-gradient(rgba(56, 113, 224, 0.0), rgba(56, 113, 224, 0.2)) !important;
-	&[data-broccoli-sub-mod-name]{
+	&[data-broccoli-sub-mod-name] {
 		background: linear-gradient(rgba(24, 154, 163, 0.0), rgba(24, 154, 163, 0.2)) !important;
 	}
 }
 
-.broccoli__panel-drop-to-insert-here{
+.broccoli__panel-drop-to-insert-here {
 	background-color: #f93;
 	&:before,
-	&:after{
-		border-color:#f93;
+	&:after {
+		border-color: #f93;
+		border-top-color: transparent;
+		border-bottom-color: transparent;
 	}
 }
