--- a/client/src/styles/panel.scss
+++ b/client/src/styles/panel.scss
@@ -30,7 +30,7 @@
 		border-color: #3871E0;
 		background-color: rgba(56, 113, 224, 0);
 
-		.broccoli__panel-module-name{
+		.broccoli__panel-module-name {
 			display: block;
 			position: sticky;
 			left: 0px; top: 0px;
@@ -53,10 +53,10 @@
 			}
 		}
 
-		&[data-broccoli-sub-mod-name]{
+		&[data-broccoli-sub-mod-name] {
 			border-color: #189AA3;
 			background-color: rgba(24,154,163, 0);
-			.broccoli__panel-module-name{
+			.broccoli__panel-module-name {
 				>div {
 					border: 1px solid #189AA3;
 					background: #189AA3;
@@ -82,35 +82,35 @@
 	border-color: #3871E0;
 	background-color: rgba(56, 113, 224, 0.1);
 
-	&[data-broccoli-sub-mod-name]{
+	&[data-broccoli-sub-mod-name] {
 		border-color: #189AA3;
 		background-color: rgba(24, 154, 163, 0.1);
 	}
-	>.broccoli__panel-drop-to-insert-here{
+	>.broccoli__panel-drop-to-insert-here {
 		display: block;
 	}
 }
 
-.broccoli__panel--drag-entered-u{
+.broccoli__panel--drag-entered-u {
 	background: linear-gradient(rgba(56, 113, 224, 0.2), rgba(56, 113, 224, 0.0)) !important;
-	&[data-broccoli-sub-mod-name]{
+	&[data-broccoli-sub-mod-name] {
 		background: linear-gradient(rgba(24, 154, 163, 0.2), rgba(24, 154, 163, 0.0)) !important;
 	}
-	>.broccoli__panel-drop-to-insert-here{
+	>.broccoli__panel-drop-to-insert-here {
 		top: -8px; bottom: auto;
 	}
 }
-.broccoli__panel--drag-entered-d{
+.broccoli__panel--drag-entered-d {
 	background: linear-gradient(rgba(56, 113, 224, 0.0), rgba(56, 113, 224, 0.2)) !important;
-	&[data-broccoli-sub-mod-name]{
+	&[data-broccoli-sub-mod-name] {
 		background: linear-gradient(rgba(24, 154, 163, 0.0), rgba(24, 154, 163, 0.2)) !important;
 	}
-	>.broccoli__panel-drop-to-insert-here{
+	>.broccoli__panel-drop-to-insert-here {
 		top: auto; bottom:-8px;
 	}
 }
 
-.broccoli__panel-drop-to-insert-here{
+.broccoli__panel-drop-to-insert-here {
 	display: none;
 	border: none;
 	background-color: #f93;
@@ -131,23 +131,23 @@
 	}
 
 	&:before,
-	&:after{
-		content:' ';
-		width:0;
-		height:0;
+	&:after {
+		content: "";
+		width: 0;
+		height: 0;
 		display: inline-block;
-		border-width:7px 0 7px 13px;
-		border-style:solid;
-		border-color:#f93;
-		border-top-color:transparent;
-		border-bottom-color:transparent;
-		position:absolute;
-		left:-5%; top:-7px;
+		border-width: 7px 0 7px 13px;
+		border-style: solid;
+		border-color: #f93;
+		border-top-color: transparent;
+		border-bottom-color: transparent;
+		position: absolute;
+		left: -5%; top:-7px;
 	}
-	&:after{
-		border-left-width:0;
-		border-right-width:13px;
-		right:-5%;
-		left:auto;
+	&:after {
+		border-left-width: 0;
+		border-right-width: 13px;
+		right: -5%;
+		left: auto;
 	}
 }
