--- a/client/src/styles/findWindow-darkmode.scss
+++ b/client/src/styles/findWindow-darkmode.scss
@@ -2,6 +2,11 @@
 	&-result{
 		a{
 			border-top: 1px solid #444;
+			color: #ddd;
+			&:hover {
+				color: #ccf;
+				background-color: #333;
+			}
 		}
 	}
 }
