編集ウィンドウを開いたとき、常にタイトルにフォーカスを移すようになった。

--- a/client/src/apis/editWindow_files/templates/main.twig
+++ b/client/src/apis/editWindow_files/templates/main.twig
@@ -2,7 +2,7 @@
 	<div class="broccoli__edit-window-btn-close button"><button></button></div>
 	<form action="javascript:;">
 		<div class="broccoli__edit-window-logical-path">---</div>
-		<h2 class="broccoli__edit-window-module-name">---</h2>
+		<h2 class="broccoli__edit-window-module-name" tabindex="0">---</h2>
 		<div class="broccoli__edit-window-module-readme-switch"><a href="javascript:;">{{ lb.get('ui_label.show_readme') }}</a></div>
 		<div class="broccoli__edit-window-module-readme"><div class="broccoli__edit-window-module-readme-inner"><article class="broccoli__module-readme"></article></div></div>
 		<div class="broccoli__edit-window-message-field"></div>
