--- a/client/src/styles/editWindow.scss
+++ b/client/src/styles/editWindow.scss
@@ -26,7 +26,7 @@
 		font-weight: bold;
 		position: relative;
 		small {
-			display: block;
+			display: none;
 			font-size: 11px;
 			line-height: 1.3;
 			margin: 0 2px;
