--- a/client/src/styles/instanceTreeView.scss
+++ b/client/src/styles/instanceTreeView.scss
@@ -126,23 +126,26 @@
 			height: auto;
 			padding: 2px 5px;
 			overflow: hidden;
+			max-width: 100%;
 			max-height: 80vh;
-			line-height: 1;
+			line-height: 1.1;
 
 			* {
+				font-size: 9px;
+
+				color: #999;
+				text-decoration: none;
+				width: auto;
+				height: auto;
+				max-width: 100%;
+				max-height: 80vh;
 				margin: 0;
 				padding: 0;
-				font-size: 9px;
-				line-height: 1;
-				list-style-type: none;
-				font-weight: normal;
-				display: inline;
-				color: #999;
 				border: 0 none;
 				background: transparent none;
-			}
-			img {
-				max-width: 180px;
+				list-style-type: none;
+				font-weight: normal;
+				pointer-events: none;
 			}
 		}
 
