`extra` オプションを追加した。

--- a/tests/testdata/modules1/dev/twig/template.html.twig
+++ b/tests/testdata/modules1/dev/twig/template.html.twig
@@ -47,4 +47,6 @@
 <div class="twig_template-is_canvas">これは編集画面にしか表示されない要素です。</div>
 {%endif%}
 
+<div>Getting extra data: {{ _ENV.extra.foo }}</div>
+
 </div>
