--- a/client/src/styles/panel.scss
+++ b/client/src/styles/panel.scss
@@ -1,4 +1,5 @@
 .broccoli__panel {
+	display: block;
 	border-width: 2px;
 	border-style: solid;
 	border-color: transparent;
@@ -32,12 +33,15 @@
 
 		.broccoli__panel-module-name {
 			display: block;
-			position: sticky;
+			position: absolute;
 			left: 0px; top: 0px;
 			text-align: left;
+			width: 100%;
+			height: 100%;
+
 			>div {
 				display: inline-block;
-				position: relative;
+				position: sticky;
 				left: -2px; top: -2px;
 				border: 1px solid #3871E0;
 				background: #3871E0;
